--- a/admin.html
+++ b/admin.html
@@ -16,6 +16,9 @@
         <header class="flex justify-between items-center mb-8">
             <h1 class="text-4xl font-bold text-gray-800">後台管理</h1>
             <div class="space-x-4">
+                <a href="/projects" class="text-indigo-600 hover:text-indigo-800 font-semibold py-2 px-4 rounded-lg transition duration-150">
+                    &larr; 返回專案列表
+                </a>
                 <button onclick="logout()" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded-lg transition duration-150">
                     登出
                 </button>
